[package]
name = "tippytap"
version = "0.1.0"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
libc = "0.2"
nix = "0.17"
tokio = { version = "0.2", optional = true, features = ["fs"] }

[features]
default = ["async"]
async = ["tokio"]

